# amaranta_candles

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_server  Dockerfile_ui  Pipfile  README.md
.github/workflows/: all.yaml  build.yml
deployment/: .gitignore  README.md  amaranta_candles  amaranta_candles.service.j2  amaranta_candles_server.service.j2  amaranta_candles_ui.service.j2  generate_service.py  inner_nginx.conf  pre-commit
server/: .dockerignore  .env.base  .env.dev  .env.dev_sqlite  .env.prod  .gitignore  Dockerfile  Pipfile  README.md  add_candle.py  confirmation2.txt  makemigrations.sh  pyproject.toml  requirements.txt  run.sh  test.py  test.sh  working_with_schema.txt
server/amaranta_candles/: .models.py.swp  .urls.py.swp  admin.py  apps.py  models.py  schema.py  serializers.py  tests.py  urls.py  views.py
server/amaranta_candles/management/commands/: backup.py  initadmin.py  load_from_confirmation.py
server/amaranta_candles/migrations/: 0001_initial.py  0002_auto_20200328_1812.py  0003_auto_20200503_0917.py  0004_auto_20200507_1732.py  0005_auto_20200507_1925.py
server/core/: archive.py  schema.py  secrets.py  settings.py  settings_build.py  test_runner.py  urls.py  wsgi.py
server/data/: candles-archive.sql
server/scripts/: build_archive.py
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.config.js  webpack.dev.js
ui/src/: index.jsx
ui/src/api/: scents.ts
ui/src/batches/: BatchForm.tsx  BatchPage.tsx  BatchesPage.tsx  api.ts  slice.ts  types.d.ts
ui/templates/: index.html
(+61 files in other folders)
