[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Daniel Porteous <daniel@dport.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-mysql = "^4.12.0"
djangorestframework = "^3.14.0"
gunicorn = "^21.2.0"
mysqlclient = "^2.2.0"
django-filter = "^23.3"
graphene-django = "^3.1.5"
django-cors-headers = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
