[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Daniel Porteous <daniel@dport.me>"]
readme = "README.md"
package-mode = false

# The archive reads one SQLite file and serves JSON, so the dependency list is
# only what that needs. Dropped along the way:
#   mysqlclient / django-mysql  the data now lives in SQLite, in the image
#   graphene-django             the GraphQL mutations are gone (see core/urls.py)
#   django-cors-headers         UI and API share an origin now
#   django-filter               nothing filtered; /api/<thing>/<id> covers by-id
[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
djangorestframework = "^3.16"
gunicorn = "^23.0"
whitenoise = "^6.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
